kyverno/disable-automount.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disable-automountserviceaccounttoken
  annotations:
    policies.kyverno.io/title: Disable automountServiceAccountToken
    policies.kyverno.io/category: Other
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: ServiceAccount
    kyverno.io/kyverno-version: 1.5.1
    kyverno.io/kubernetes-version: "1.21"
    policies.kyverno.io/description: >-
      A new ServiceAccount called `default` is created whenever a new Namespace is created.
      Pods spawned in that Namespace, unless otherwise set, will be assigned this ServiceAccount.
      This policy mutates any new `default` ServiceAccounts to disable auto-mounting of the token
      into Pods obviating the need to do so individually.      
spec:
  rules:
  - name: disable-automountserviceaccounttoken
    match:
      resources:
        kinds:
        - ServiceAccount
        names:
        - default
    mutate:
      patchStrategicMerge:
        automountServiceAccountToken: false
